--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,45 @@
-python-binance
-pandas
-pandas_datareader
-matplotlib
-python-dotenv
-yfinance
+aiohttp==3.9.5
+aiosignal==1.3.1
+appdirs==1.4.4
+async-timeout==4.0.3
+attrs==23.2.0
+beautifulsoup4==4.12.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+contourpy==1.2.1
+cycler==0.12.1
+dateparser==1.2.0
+fonttools==4.51.0
+frozendict==2.4.4
+frozenlist==1.4.1
+html5lib==1.1
+idna==3.7
+kiwisolver==1.4.5
+lxml==5.2.1
+matplotlib==3.8.4
+multidict==6.0.5
+multitasking==0.0.11
+numpy==1.26.4
+packaging==24.0
+pandas==2.2.2
+pandas-datareader==0.10.0
+peewee==3.17.5
+pillow==10.3.0
+pycryptodome==3.20.0
+pyparsing==3.1.2
+python-binance==1.0.19
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+regex==2024.5.10
+requests==2.31.0
+six==1.16.0
+soupsieve==2.5
+tzdata==2024.1
+tzlocal==5.2
+ujson==5.9.0
+urllib3==2.2.1
+webencodings==0.5.1
+websockets==12.0
+yarl==1.9.4
+yfinance==0.2.38
